project after modification

--- a/index.html
+++ b/index.html
@@ -49,21 +49,21 @@
     <div class="featuers">
         <div class="continer grid-3">
             <div class="feat">
-                <i class="fa-solid fa-wand-magic-sparkles fa-3x"></i>
+                <i class="fa-solid fa-wand-magic-sparkles ico-proparite"></i>
                 <h3>tell us your idea</h3>
                 <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non eligendi quae, ratione, asperiores  
                 </p>
             </div>
             <div class="feat">
-                <i class="far fa-gem fa-3x"></i>
+                <i class="far fa-gem ico-proparite"></i>
                 <h3>we will do all the Work</h3>
                 <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non eligendi quae, ratione, asperiores  
                 </p>
             </div>
             <div class="feat">
-                <i class="fa-solid fa-earth-europe fa-3x"></i>
+                <i class="fa-solid fa-earth-europe ico-proparite"></i>
                 <h3>your product is worldwide</h3>
                 <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non eligendi quae, ratione, asperiores   
@@ -81,7 +81,7 @@
                 <div class="col">
                     <!-- start one sercice -->
                     <div class="srv">
-                        <i class="fa-solid fa-jet-fighter-up"></i>
+                        <i class="fa-solid fa-jet-fighter-up ico-proparite"></i>
                         <div class="text">
                             <h3>web design</h3>
                             <p>
@@ -93,7 +93,7 @@
                     <!-- end one sercice -->
                     <!-- start one sercice -->
                     <div class="srv">
-                        <i class="fa-solid fa-person-falling"></i>
+                        <i class="fa-solid fa-person-falling ico-proparite"></i>
                         <div class="text">
                             <h3>web design</h3>
                             <p>
@@ -107,7 +107,7 @@
                 <div class="col">
                     <!-- start one sercice -->
                     <div class="srv">
-                        <i class="fa-solid fa-shield-heart"></i>
+                        <i class="fa-solid fa-shield-heart ico-proparite"></i>
                         <div class="text">
                             <h3>web design</h3>
                             <p>
@@ -119,7 +119,7 @@
                     <!-- end one sercice -->
                     <!-- start one sercice -->
                     <div class="srv">
-                        <i class="fa-solid fa-sailboat"></i>
+                        <i class="fa-solid fa-sailboat ico-proparite"></i>
                         <div class="text">
                             <h3>web design</h3>
                             <p>
